# auto_guild

./: .gitignore  LICENSE  README.md  auto_guild.py  notes.txt  pyproject.toml  structure.yml
auto_guild/: __main__.py
examples/: pydis_config_template.yml  pydis_dev.yml
templates/: pydis_bot.yml
